--- a/WoodlandsSupplyCoWebApp/Content/Site.css
+++ b/WoodlandsSupplyCoWebApp/Content/Site.css
@@ -282,6 +282,32 @@ table {
 }
 
 .check-out-btn {
-    left: 45%;
     font-size: 1.5em
+}
+
+/* Login Page */
+
+#login-or-create-section {
+    background: url(/Assets/sebastian-pichler-53817-unsplash.jpg);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding: 19.5em;
+}
+
+#login-or-create-section input {
+    width: 50%;
+    border-color: #1F2B26;
+}
+
+.account-form {
+    padding-top: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    background: white;
+    margin-top: 1em;
+    margin-bottom: 3em;
+    border-radius: 30px;
 }
