--- a/WoodlandsSupplyCoWebApp/Content/Site.css
+++ b/WoodlandsSupplyCoWebApp/Content/Site.css
@@ -299,7 +299,7 @@ table {
 
 #login-or-create-section input {
     width: 50%;
-    border-color: #1F2B26;
+    border-color: #1F2B26
 }
 
 .account-form {
